# markdowner

./: README.ko.md  README.md  VERSION  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
crates/markdowner-core/src/: settings.rs  storage.rs  workspace.rs
crates/markdowner-core/tests/: markdown_fixtures.rs
crates/markdowner-core/tests/fixtures/: catalog.json
docs/: markdown-coverage.md
scripts/: build-and-install.sh  build-and-install.test.sh  build-and-run.sh  bump-version.mjs
src/: App.test.tsx  App.tsx  AppCoreFlow.test.tsx  editorPlayground.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  link_actions.rs  updater.rs
src/components/: SourceEditorView.tsx
src/components/wysiwyg/: ImeDebugOverlay.tsx  LinkPopup.tsx  SelectionToolbar.tsx  SlashCommandMenu.test.tsx  SlashCommandMenu.tsx  preventTableHoverSelection.test.ts  preventTableHoverSelection.ts  tableMarkdownExtensions.test.ts  tableMarkdownExtensions.ts
src/lib/: desktop.ts  documentStats.test.ts  documentStats.ts  documentTabs.test.ts  documentTabs.ts  editorEvents.ts  externalChanges.test.ts  externalChanges.ts  fileDialogOptions.ts  focusTargets.test.ts  focusTargets.ts  fuzzy.ts  hangulQwerty.test.ts  imeDebug.ts  keyboardShortcuts.test.ts  keyboardShortcuts.ts  linkOpener.test.ts  linkOpener.ts  markdownHeadings.ts  modeCursor.test.ts  modeCursor.ts  openDocumentSelection.test.ts  openDocumentSelection.ts  openTabsSession.test.ts  openTabsSession.ts  outline.ts  settings.test.ts  settings.ts  shellDisplay.test.ts  shellDisplay.ts  shellModel.test.ts  shellModel.ts  sidebarState.test.ts  sidebarState.ts  sourceEditorTheme.test.ts  sourceEditorTheme.ts  sourceText.test.ts  sourceText.ts  workspaceTree.test.ts  workspaceTree.ts  (+6 more)
src/shell/: ActivityBar.tsx  CommandPalette.tsx  DocumentStatsDialog.tsx  EditorArea.tsx  ExplorerPanel.test.tsx  ExplorerPanel.tsx  Header.tsx  OutlinePanel.test.tsx  OutlinePanel.tsx  SettingsDialog.tsx  SettingsPanel.tsx  ShortcutsDialog.tsx  SideBar.tsx  SourceEditorPane.test.tsx  SourceEditorPane.tsx  StatusBar.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  WorkspaceTree.test.tsx  WorkspaceTree.tsx  commandPaletteCommands.test.ts  commandPaletteCommands.ts
(+6 files in other folders)
