[package]
name = "markdowner-desktop"
version = "0.260528.2"
description = "Markdowner desktop shell"
edition = "2024"
default-run = "markdowner-desktop"

[lib]
name = "markdowner_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
markdowner-core = { path = "../crates/markdowner-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2.4.1"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3"
